decidim-budgets_booth/app/packs/stylesheets/decidim/budgets_booth/budgets_booth.scss
/* css for decidim_budgets_booth */

#voting-help{
  .voting-help-item{
    @apply my-4 md:my-0;

    .circle{
      @apply block relative border-2 border-solid border-black rounded-full w-["150px"] h-["150px"] left-[20%] md:left-2.5;

      &.active{
        @apply fill-[#919191] border-4 border-solid border-[#919191];

        svg{
          @apply fill-[#919191];
        }
      }

      svg{
        @apply block relative fill-[#919191] top-[23px] left-[22px] w-[100px] h-[100px];
      }
    }

    .help-description{
      @apply mt-2 text-[1.2rem];

      span{
        &.strong{
          @apply font-extrabold;
        }
      }

      &.active{
        @apply text-black;
      }

      @apply text-[#919191] flex flex-col items-center text-center;
    }
  }

  .card{
    &.card--secondary{
      .filters__section:first-child{
        @apply hidden md:block;
      }
    }
  }
}

.card--list__icon{
  @apply mr-0;
}

.spaced-bottom{
  @apply mb-[.3rem];
}

.flex-column{
  @apply flex-col md:flex-col;
}

.card{
  &.budget-summary{
    @apply flex flex-col;

    a{
      @apply mt-4 mr-0 mb-0;
    }
  }
}

.customized-budget{
  @apply m-auto;
}

.font-customizer{
  h2,
  h3{
    @apply text-[1.1rem];
  }
}

.voted-budget{
  @apply grayscale;
}

.flex-digits{
  @apply flex justify-between;

  .flex-digits-input{
    @apply flex flex-none;

    input{
      @apply mx-auto h-10 w-10 text-center sm:h-12 sm:w-12;
    }
  }
}

.zip-code-errors{
  .form-error{
    @apply mt-4;
  }
}

.booth-zipcode{
  &.thumbnail{
    @apply pr-1 pl-1;
  }

  &.maximum-width{
    @apply max-w-[430px];
  }
}

#affirm-checkbox{
  @apply font-bold mt-4;
}

.budget-summary{
  @apply text-center;

  &__progressbox{
    @apply flex flex-col gap-2 pb-2 xl:gap-4 xl:flex-row xl:justify-between;
  }
}

.progress-ready-button{
  @apply button button__lg w-full h-12 flex flex-row items-center justify-center gap-2 button__secondary font-bold text-md md:text-lg xl:w-fit;
}

.budget__list--header{
  @apply flex justify-end items-center mx-3.5;
}

.budget-list{
  a{
    @apply hover:no-underline;

    :hover h3{
      @apply underline;
    }
  }

  &__data{
    @apply justify-center;
  }

  &__item{
    @apply mb-8 border-background flex flex-col border w-full md:mb-0 lg:flex-row lg:justify-between;

    .explore-link{
      @apply w-full lg:w-52 bg-[#f2fcfd] lg:flex-shrink-0;

      .button.is-hover,
      .button.is-focus,
      .button:not([disabled]):not([class*=button__text]):not(label):hover,
      .button:not([disabled]):not([class*=button__text]):not(label):focus{
        @apply bg-none;

        &.button__transparent-secondary{
          @apply text-white bg-[--primary];

          svg{
            @apply fill-white;
          }
        }

        &.button__secondary{
          @apply text-[--primary] bg-white border-[--primary];

          svg{
            @apply fill-[--primary];
          }
        }
      }
    }

    .selected-project{
      @apply w-full lg:w-52 bg-[#e1fae8] lg:flex-shrink-0;
    }
  }
}

.budget__card__prevote{
  @apply flex flex-row justify-between lg:space-y-2 lg:block;

  .budget__card__highlight-prevote__header{
    @apply flex flex-col items-start space-y-2 lg:items-center;

    .budget__card__highlight-prevote__text{
      @apply text-md max-w-[150px] truncate;
    }

    .budget__card__highlight-prevote__number{
      @apply font-bold text-[28px] max-w-[150px] h-[26px] truncate;
    }
  }

  .budget__card__prevote-explore-button{
    @apply text-lg lg:mt-2;

    &-container{
      @apply flex justify-center items-center;
    }
  }
}

.pre-voting-budget-summary{
  @apply py-4 bg-[#f2fcfd];
}

.collection-sort-controls{
  @apply flex items-start;
}

.voting-rules{
  @apply text-xl my-4 w-4/6 mx-auto;

  .link{
    @apply text-lg font-semibold text-[--primary];
  }

  svg{
    @apply pt-0 fill-[--primary];
  }
}

.projects-link{
  @apply container grid grid-cols-12 text-xl font-semibold text-[--primary] pt-6;

  a{
    @apply col-span-full;
  }
}

.project-info{
  @apply h-min py-4 bg-[#f2fcfd];

  .definition-data__title{
    @apply text-md text-center;
  }

  .definition-data__number{
    @apply font-bold text-[28px] mb-4;
  }

  span.success{
    @apply flex items-center text-lg;
  }
}

.progress-background{
  @apply bg-[#f2fcfd];
}

.vote-progress-container{
  @apply z-50 max-[767px]:bg-[#f2fcfd];
}

.vote-progress-content{
  @apply mx-auto w-full container grid grid-cols-1 py-5;
}

.no-top{
  @apply pt-0;
}

.budget-summary__selected-item > div:nth-child(1){
  @apply w-3/6;
}

.budget-summary__selected-item > div > div:nth-child(1),
.budget-summary__selected-item > div > div:nth-child(2){
  @apply md:w-3/6;
}

.project-vote-button-container{
  @apply fill-[--primary];
}

#budget-confirm[data-dialog] [data-dialog-container] > :last-child{
  @apply col-span-2 col-start-1;

  .budget-confirm__selected-number{
    @apply font-bold text-lg md:text-3xl;
  }
}

.start-vote-button{
  @apply w-full lg:w-fit;
}

#budgets.card__list-list{
  @apply w-full mx-auto xl:space-y-8 xl:mb-0 lg:w-3/5;

  a{
    :hover p{
      @apply underline;
    }
  }

  .card__highlight{
    @apply flex flex-col space-y-10 rounded-none ring-2 hover:no-underline hover:ring-background lg:space-y-0 lg:flex-row;

    > :not([hidden]) ~ :not([hidden]){
      @apply max-[391px]:mt-0 max-[496px]:mt-2.5 p-4 mt-10 lg:mt-0;
    }

    .budget__card__highlight-vote{
      @apply bg-[#f2fcfd] p-0 mt-0 bg-[#f2fcfd] w-full flex flex-row justify-between lg:flex-col lg:items-center lg:w-4/12 lg:text-center;

      &__text{
        @apply text-md text-black mb-2.5 lg:mx-auto;
      }

      &__number{
        @apply font-bold text-black text-[28px] h-[26px];
      }

      &__header{
        @apply truncate max-w-[150px];
      }
    }
  }
}

#voted-budgets{
  .budget__card__highlight-vote{
    @apply mt-0;
  }

  .card__highlight-text{
    @apply gap-0 pb-[18px] p-4;
  }

  a{
    @apply pb-0;
  }
}

.budget-progress{
  @apply relative h-12 bg-gray-3 w-full flex items-center xl:w-5/6;
}

.progress-meter.budget-progress__meter{
  @apply bg-[#58a491] h-full flex items-center justify-center;

  > span{
    @apply text-black;
  }
}

.progress-meter-text.progress-meter-text--right{
  @apply right-4 absolute;

  &--fixed{
    @apply max-[380px]:hidden 2xl:right-1/4 2xl:pr-20 2xl:absolute;
  }
}

.budget-summary__selected{
  @apply flex items-center justify-between md:justify-start xl:gap-6 xl:justify-start;

  h6{
    @apply text-[--primary];
  }

  svg{
    @apply fill-[--primary];
  }

  button{
    p{
      @apply text-[--primary];
    }
  }

  &-number{
    @apply text-lg md:text-2xl;
  }
}

.budget-summary__total{
  @apply text-center text-lg my-2 xl:text-left;
}

// Success image for status -view

.success-image{
  --success: #4a8d7c;

  width: 150px;
  height: 150px;
  margin: auto;

  @media (max-width: 768px){
    width: 100px;
    height: 100px;
  }

  .animation-success__checkmark{
    width: 100%;
    height: 100%;
    border-radius: 50%;
    display: block;
    stroke-width: 5;
    stroke: var(--success);
    stroke-miterlimit: 10;
    box-shadow: inset 0 0 0 #4bb71b;
    animation:
      fill .4s ease-in-out .4s forwards,
      scale .3s ease-in-out .09s both;
    position: relative;
    top: 5px;
    right: 5px;
    margin: 0 auto;
  }

  .animation-success__checkmark__circle{
    stroke-dasharray: 166;
    stroke-dashoffset: 166;
    stroke-width: 5;
    stroke-miterlimit: 10;
    stroke: var(--success);
    fill: #fff;
    animation: stroke .6s cubic-bezier(.65, 0, .45, 1) forwards;
  }

  .animation-success__checkmark__check{
    transform-origin: 50% 50%;
    stroke-dasharray: 48;
    stroke-dashoffset: 48;
    animation: stroke .3s cubic-bezier(.65, 0, .45, 1) .8s forwards;
  }

  @keyframes stroke{
    100%{
      stroke-dashoffset: 0;
    }
  }

  @keyframes scale{
    0%,
    100%{
      transform: none;
    }

    50%{
      transform: scale3d(1.1, 1.1, 1);
    }
  }

  @keyframes fill{
    100%{
      box-shadow: inset 0 0 0 30 var(--success);
    }
  }
}

.status-choices{
  @apply flex justify-center items-center pb-10 text-2xl font-bold text-[--primary];

  svg{
    @apply fill-[--primary] h-6 w-6 mt-0;
  }
}

.filter{
  label{
    @apply flex items-center gap-2;

    [id^="dropdown-title-with_any_category_"]{
      @apply truncate max-w-[120px] block;
    }
  }
}

.form__wrapper{
  &-block{
    .status-logout{
      @apply only:[&_*]:ml-0;
    }
  }
}

#status-summary{
  #status-summary-content{
    [data-dialog-actions]{
      a > svg{
        @apply mb-0;
      }
    }
  }
}

.voting-wrapper{
  .layout-item__aside{
    @apply lg:col-end-13 lg:col-span-3;
  }
}

.selected_project-tag{
  @apply rounded;
}

.votes__count-aside{
  @apply text-center text-xl font-semibold border-t border-b py-2 border-black;
}

.voted-block{
  @apply flex;

  svg{
    @apply mt-[3px];
  }
}

